# kairos-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  kairos-saarthi.yaml  kairos-test.yaml  kairos.yaml.example  pyproject.toml  test_saarthi.py
kairos_agent/: __init__.py  cli.py  compressor.py  config.py  context_assembler.py  notifier.py  pipeline.py  service_catalog.py  setup.py  summarizer.py  webhook_receiver.py
kairos_agent/sources/: __init__.py  datadog_source.py  file_source.py  http_source.py  loki_source.py  newrelic_source.py
scripts/: simulate_newrelic_alert.sh
tests/: test_alert_type.py  test_compressor.py  test_config.py  test_context_assembler.py  test_datadog_source.py  test_http_source.py  test_loki_source.py  test_newrelic_source.py  test_notifier.py  test_quality.py  test_service_catalog.py  test_sources.py  test_webhook.py
