[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kairos-agent"
version = "0.2.0"
description = "AI-powered incident context assembler for SRE teams"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Kairos Contributors" },
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.scripts]
kairos-agent = "kairos_agent.cli:main"
